--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js --port 4000",
     "dev": "nodemon server.js",
     "seed": "cp db/seeds.json db/db.json"
   },
